02-rollouts/traefik/single-route/apiv1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiv1-deploy
  namespace: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po

  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: app-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
